; ModuleID = '/home/carl/AnghaBench/git/refs/extr_ref-cache.c_free_ref_entry.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_ref-cache.c_free_ref_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_entry = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@REF_DIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ref_entry*)* @free_ref_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_ref_entry(%struct.ref_entry* %0) #0 {
  %2 = alloca %struct.ref_entry*, align 8
  store %struct.ref_entry* %0, %struct.ref_entry** %2, align 8
  %3 = load %struct.ref_entry*, %struct.ref_entry** %2, align 8
  %4 = getelementptr inbounds %struct.ref_entry, %struct.ref_entry* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @REF_DIR, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.ref_entry*, %struct.ref_entry** %2, align 8
  %11 = getelementptr inbounds %struct.ref_entry, %struct.ref_entry* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call i32 @clear_ref_dir(i32* %12)
  br label %14

14:                                               ; preds = %9, %1
  %15 = load %struct.ref_entry*, %struct.ref_entry** %2, align 8
  %16 = call i32 @free(%struct.ref_entry* %15)
  ret void
}

declare dso_local i32 @clear_ref_dir(i32*) #1

declare dso_local i32 @free(%struct.ref_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
